Header spacing fix

--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -3,7 +3,6 @@
 .post-container { margin: 0 40px; }
 
 .post-header, .index-header {
-  padding: 0 0 2em;
   text-align: center;
   text-transform: uppercase;
 }
